names show up for burgers

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li>
-    {{name}}
+    {{burger_name}}
 
     <button class="change-devoured" data-id="{{id}}" data-newDevoured="{{devoured}}">
-        {{#if devoured}}Chow Time!{{else}}EAT UP!{{/if}}
+        {{#if devoured}}Chow Time!{{/if}}
     </button>
 
-    <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+    <button class="delete-burger" data-id="{{this.id}}">Delete!</button>
 </li>
